docs(family): menambahkan dokumentasi api untuk GetFamilyByID route
